--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,20 +1,23 @@
 .nav-container {
-  height: 100%;
-  width: 100%
+  height: 10%;
+  width: 100%;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
-  height: 10%;
+  /* background-color: white; */
+  height: 100%;
   width: 100%;
+  border-bottom: 1px solid black;
+  
 }
 
 .title {
   margin-left: 10%;
   font-size: 5vw;
+
 }
 
 .home-button {
