--- a/src/styles/Article.css
+++ b/src/styles/Article.css
@@ -1,15 +1,38 @@
 .article {
   /* border: 3px solid blue; */
   display:flex;
+  /* align-items: center; */
   height: 90%;
   width: 90%;
   margin-bottom: 10%;
+  padding-bottom: 4%;
+  border-bottom: 1px solid black;
   /* justify-content: space-between; */
 }
 
 .article-photo {
-  height: auto;
-  width: 40%;
+  height: 100%;
+  width: 100%;
+  max-width: 500px;
+  object-fit: cover;
   margin-left: 5%;
   margin-right: 5%;
+}
+
+.article-text-container {
+  /* border: 2px solid blue; */
+  display: flex;
+  flex-direction: column;
+}
+
+.article-title {
+  color: black;
+  font-size: 3vw;
+  margin-bottom: 3%;
+}
+
+.article-abstract {
+  text-decoration: none;
+  color: black;
+  font-size: 2vw;
 }
