--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -2,13 +2,14 @@
   /* border: 3px solid green; */
   display: flex;
   flex-direction: column;
-  height: 90vh;
+  height: 80vh;
   width: 100vw;
   overflow-x: scroll;
 }
 h2 {
   text-align: center;
-  margin: 5%;
+  /* margin: 3%; */
+  margin-bottom: 5%;
   /* color: white; */
   font-size: 4vw;
 }
