--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,23 +1,30 @@
 .nav-container {
-  height: 10%;
+  height: 25%;
   width: 100%;
+  display:flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
 }
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   /* background-color: white; */
-  height: 100%;
+  height: 50%;
   width: 100%;
   border-bottom: 1px solid black;
   
 }
 
 .title {
-  margin-left: 10%;
+  /* margin-left: 10%; */
   font-size: 5vw;
 
+}
+
+.title:hover {
+  cursor: pointer;
 }
 
 .home-button {
@@ -27,4 +34,28 @@
   font-size: 3vw;
   background: none;
   border: none;
+}
+
+.sections {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 30%;
+  border-bottom: 1px solid black;
+  margin: 1%;
+  padding-bottom: 1%;
+}
+
+button {
+  height: 30%;
+  width: 10%;
+  border-radius: 30px;
+  border:none;
+  /* margin: .2%; */
+  background-color: transparent;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(218, 218, 218);
 }
